Temp fix for Prospero table of contents being too far to the right - should update package itself. Or maybe it's perfectly fine and a proper use of the style override? Need to think on it. Also adding padding to other readings section when on mobile.

--- a/pages/styles.scss
+++ b/pages/styles.scss
@@ -20,4 +20,5 @@ button {
 .prospero__closeButton {
   background-color: black !important;
   color: white !important;
+  margin-right: auto;
 }
