--- a/src/prospero/index.module.scss
+++ b/src/prospero/index.module.scss
@@ -27,6 +27,7 @@
 
 .otherReadings {
   margin: auto;
+  padding: 1em;
 }
 
 .otherReadingsList {
